[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumclouds"  # This is the name for pip install
version = "0.1.1"
description = "A GPU-accelerated 3D atomic orbital visualizer using VisPy and Matplotlib"
readme = "README.md"
authors = [
    { name = "Ritvik Anand", email = "anandritvik885@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22.0",
    "matplotlib>=3.5.0",
    "vispy>=0.14.0",
    "pyqt6>=6.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quantumclouds*"]
